# cmake_post_build

./: CMakeLists.txt  func.cpp  func.h  main.cpp
